--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,59 @@
 title: Research Notebooks
+author:
+  name: James R.T. Bird
+  email: james.bird@manchester.ac.uk
+
+
+# The `>` after `description:` means to ignore line-breaks until next key.
+# If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
   Electronic Research Notebooks (ERNs) at Manchester has been set up, in the first instance, to share interative .html plots with researchers and research-supporting staff at the University, which graphically depict features of ERNs.
 
 # Build settings
-remote_theme: jekyll/minima
+#Following advice to quote specific git ref (portion following the @) when using remote_theme. This is relevant as the main branch of minima (Minima 3.0) is still in active development. The particular commit is from 27 Feb '25.
+remote_theme: "jekyll/minima@1e8a445"
+
+#plugins:
+#  - jekyll-feed
+#  - jekyll-seo-tag
+
+# Minima specific settings, which are only available from Minima 3.0 onward.
+minima:
+  # Minima skin selection.
+  # Available skins are:
+  # classic	           Default, light color scheme.
+  # dark	             Dark variant of the classic skin.
+  # auto	             Adaptive skin based on the default classic and dark skins.
+  # solarized-light	   Light variant of solarized color scheme.
+  # solarized-dark	   Dark variant of solarized color scheme.
+  # solarized	         Adaptive skin for solarized color scheme skins.
+  skin: solarized
+
+  # If you want to link only specific pages in the site-navigation, use this and list
+  # the `path` property (as represented via Liquid) of the pages in the order they should
+  # be rendered.
+  #nav_pages:
+  #  - about.md
+
+  # Set to `true` to show excerpts on the homepage.
+  #show_excerpts: false
+
+  # Minima date format.
+  # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
+  # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
+  #date_format: "%b-%d-%Y"
+
+  # Social Media Links
+  # Renders icons via Font Awesome Free webfonts CDN, based on ordered list of entries.
+  #
+  # Entry keys:
+  # * title    Tooltip rendered on hovering over icon.
+  # * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
+  # * url      Full URL of social profile.
+  social_links:
+    - title: Oiseau Lab
+      icon: github
+      url: "https://github.com/oiseau-lab"
+  #  - title: Jekyll at X (formerly Twitter)
+  #    icon: x-twitter
+  #    url: "https://x.com/jekyllrb"
