Test using Jekyll Collections to assist with site navigation

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,13 @@ minima:
   # Set to `true` to show excerpts on the homepage.
   #show_excerpts: false
 
+  # Jekyll collections can help define site navigation 
+  collections:
+    - stakeholder_plots
+
+  # The `collections_dir` is the directory where the collections are stored. 
+  collections_dir: my_collections
+
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
   # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
