--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ minima:
       output: true
 
   # The `collections_dir` is the directory where the collections are stored. 
-  #collections_dir: my_collections
+  collections_dir: my_collections
 
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
