--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,9 @@ description: >
   Electronic Research Notebooks (ERNs) at Manchester has been set up, in the first instance, to share interative .html plots with researchers and research-supporting staff at the University, which graphically depict features of ERNs.
 
 # Build settings
-#Following advice to quote specific git ref (portion following the @) when using remote_theme. This is relevant as the main branch of minima (Minima 3.0) is still in active development. The particular commit is from 27 Feb '25.
-remote_theme: "jekyll/minima@1e8a445"
+#Following advice to quote specific git ref (portion following the @) when using remote_theme.
+#This is relevant as the main branch of minima (Minima 3.0) is still in active development.
+remote_theme: "jekyll/minima@cdc7033"
 
 #plugins:
 #  - jekyll-feed
