--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ remote_theme: "jekyll/minima@1e8a445"
 #  - jekyll-feed
 #  - jekyll-seo-tag
 
+collections:
+  plots:
+    output: true
+    
 # Minima specific settings, which are only available from Minima 3.0 onward.
 minima:
   # Minima skin selection.
