--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
+#Configurations
 title: Research Notebooks
 author:
-  name: James R.T. Bird
-  email: james.bird@manchester.ac.uk
+  name: James R.T. Bird & Qingyi Mao
+  #email: james.bird@manchester.ac.uk
 
 
 # The `>` after `description:` means to ignore line-breaks until next key.
@@ -9,13 +10,59 @@ author:
 description: >
   Electronic Research Notebooks (ERNs) at Manchester has been set up, in the first instance, to share interative .html plots with researchers and research-supporting staff at the University, which graphically depict features of ERNs.
 
-# Build settings
-#Following advice to quote specific git ref (portion following the @) when using remote_theme. This is relevant as the main branch of minima (Minima 3.0) is still in active development. The particular commit is from 27 Feb '25.
-remote_theme: "jekyll/minima@1e8a445"
+# bootstrap: use the remote theme for the site itself
+remote_theme: sighingnow/jekyll-gitbook
 
-#plugins:
-#  - jekyll-feed
-#  - jekyll-seo-tag
+#Enable table of contents, generated from the headers in the document.
+toc:
+  enabled: true
+  h_min:   1
+  h_max:   3
+
+# customize the link favicon in header, will be {{site.baseurl}}/{{site.favicon_path}}
+#favicon_path:     /assets/gitbook/images/favicon.ico
+
+# markdown render engine.
+markdown:         kramdown
+kramdown:
+  auto_ids:               true
+  input:                  GFM
+  math_engine:            mathjax
+  smart_quotes:           lsquo,rsquo,ldquo,rdquo
+  toc_levels:             1..6
+  syntax_highlighter:     rouge
+  syntax_highlighter_opts:
+    guess_lang:           true
+
+syntax_highlighter_style: colorful
+
+markdown_ext:             markdown,mkdown,mkdn,mkd,md
+
+# Permalinks
+#permalink:                /:categories/:year-:month-:day-:title:output_ext
+
+# Disqus comments
+# disqushandler:            sighingnow
+
+exclude:
+  - _drafts
+
+page_width: 800px
+
+destination:      ./_site
+incremental:      false
+regenerate:       true
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-readme-index
+  - jemoji
+
+
+# Build settings
+#Following advice to quote specific git ref (portion following the @) when using minima remote_theme. This is relevant as the main branch of minima (Minima 3.0) is still in active development. The particular commit is from 27 Feb '25.
+remote_theme: "jekyll/minima@1e8a445"
 
 #Added plots folder (with underscore prefix) to the collection of files to be processed by Jekyll.
 collections:
@@ -23,7 +70,7 @@ collections:
     output: true #Required to generate resultant page in accordance with front matter.
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
-minima:
+#minima:
   # Minima skin selection.
   # Available skins are:
   # classic	           Default, light color scheme.
@@ -32,7 +79,7 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: auto
+  #skin: auto
 
   # If you want to link only specific pages in the site-navigation, use this and list
   # the `path` property (as represented via Liquid) of the pages in the order they should
@@ -55,10 +102,10 @@ minima:
   # * title    Tooltip rendered on hovering over icon.
   # * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
   # * url      Full URL of social profile.
-  social_links:
-    - title: Oiseau Lab
-      icon: github
-      url: "https://github.com/oiseau-lab"
+  #social_links:
+  #  - title: Oiseau Lab
+  #    icon: github
+  #    url: "https://github.com/oiseau-lab"
   #  - title: Jekyll at X (formerly Twitter)
   #    icon: x-twitter
   #    url: "https://x.com/jekyllrb"
