No difference in MWE and defaults for minima theme, bar nav-items and permalink usage. Testing here the impact of permalinks.

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ remote_theme: "jekyll/minima@1e8a445"
 collections:
   plots:
     output: true #Required to generate resultant page in accordance with front matter.
+    permalink: /:collection/:name #Define permalink for the collection of plots rather than globally.
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
 minima:
