--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,7 @@
 title: Research Notebooks
-authors:
-  moy:
-    name: Qingyi Mao
-    display_name: Moy36
-    email: qingyi@manchester.ac.uk
-    github: Moygogog
-  james:
-    name: James R.T. Bird
-    display_name: jamesbird58
-    email: james.bird@manchester.ac.uk
-    github: jamesbird58
+author:
+  name: James R.T. Bird
+  email: james.bird@manchester.ac.uk
 
 
 # The `>` after `description:` means to ignore line-breaks until next key.
