Updating authorship and README to give proper credit.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Research Notebooks
 author:
-  name: James R.T. Bird
+  name: James R.T. Bird & Qingyi 'Moy' Mao
   email: james.bird@manchester.ac.uk
 
 
